# school-seminar-competition

./: .gitignore  CMakeLists.txt  Dockerfile  download_data.sh  insert_min_node_num.py  makefile  optuna_.py  plot.sh
.devcontainer/: devcontainer.json
data/: dims.txt  instance_list.txt  test.tour  test.tsp
src/: algorithm.c  algorithm.h  cpu_time.c  cpu_time.h  sample.c  tsp.c  utils.c  utils.h
src/algorithm/: greedy.c  insertion.c  nearest_neighbor.c  replace.c  spanning_tree.c  three_opt.c  two_approximation.c  two_opt.c  two_opt_replace.c
tsp_view/: plot.gp  tsp_view.py
